--- a/api-reference/partner/pix-keys/create-pix-key.mdx
+++ b/api-reference/partner/pix-keys/create-pix-key.mdx
@@ -1,36 +1,78 @@
 ---
-title: "Create PIX Key"
-description: "Create a PIX key request for a partner user."
-api: "POST https://api.bipa.tech/partner/v1/pix-key"
+title: "Create Pix Key"
+description: "Request a new Pix key for a partner user."
 ---
+
+## Endpoint
+
+```
+POST /partner/v1/pix-key
+```
 
 ## Request
 
-Create a PIX key registration request for a user identified by their document (CPF or CNPJ). The key registration is processed asynchronously.
+### Headers
 
-### Body parameters
+| Name | Type | Required | Description |
+|------|------|----------|-------------|
+| `X-API-Key` | string | Yes | Your partner API key |
+| `Content-Type` | string | Yes | `application/json` |
 
-<ParamField body="document" type="string" required>
-  User's CPF (11 digits) or CNPJ (14 digits). Can be formatted or unformatted.
-</ParamField>
+### Body
 
-<ParamField body="idempotency_key" type="string" required>
-  Unique identifier (UUID) to prevent duplicate requests
-</ParamField>
+| Field | Type | Required | Description |
+|-------|------|----------|-------------|
+| `document` | string | Yes | User's CPF (tax ID) |
+| `idempotency_key` | string (UUID) | Yes | Unique key to prevent duplicate requests |
+
+```json
+{
+  "document": "12345678900",
+  "idempotency_key": "550e8400-e29b-41d4-a716-446655440000"
+}
+```
 
 ## Response
 
-<ResponseField name="status" type="string">
-  Request status:
-  - `accepted` - Request created, key registration in progress
-  - `already_exists` - PIX key already exists for this user
-  - `user_not_found` - User with this document not found
-  - `invalid_document` - Document format is invalid
-  - `failed` - Request failed due to an error
-</ResponseField>
+### Success (202 Accepted)
 
-<RequestExample>
-```bash cURL
+The request was accepted and the Pix key creation is in progress.
+
+```json
+{
+  "status": "accepted"
+}
+```
+
+### Already exists (409 Conflict)
+
+A Pix key already exists for this user.
+
+```json
+{
+  "status": "already_exists"
+}
+```
+
+### User not found (404 Not Found)
+
+```json
+{
+  "status": "user_not_found"
+}
+```
+
+### Invalid document (400 Bad Request)
+
+```json
+{
+  "status": "invalid_document"
+}
+```
+
+## Example
+
+```bash
 curl -X POST https://api.bipa.tech/partner/v1/pix-key \
   -H "X-API-Key: your_partner_api_key" \
   -H "Content-Type: application/json" \
@@ -40,113 +82,6 @@ curl -X POST https://api.bipa.tech/partner/v1/pix-key \
   }'
 ```
 
-```python Python
-import requests
-import uuid
-
-response = requests.post(
-    "https://api.bipa.tech/partner/v1/pix-key",
-    headers={
-        "X-API-Key": "your_partner_api_key",
-        "Content-Type": "application/json"
-    },
-    json={
-        "document": "12345678900",
-        "idempotency_key": str(uuid.uuid4())
-    }
-)
-
-result = response.json()
-print(f"Status: {result['status']}")
-```
-
-```javascript Node.js
-import { randomUUID } from "crypto";
-
-const response = await fetch("https://api.bipa.tech/partner/v1/pix-key", {
-  method: "POST",
-  headers: {
-    "X-API-Key": "your_partner_api_key",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    document: "12345678900",
-    idempotency_key: randomUUID()
-  })
-});
-
-const result = await response.json();
-console.log(`Status: ${result.status}`);
-```
-
-```go Go
-import (
-    "bytes"
-    "encoding/json"
-    "net/http"
-    "github.com/google/uuid"
-)
-
-payload := map[string]string{
-    "document":        "12345678900",
-    "idempotency_key": uuid.New().String(),
-}
-body, _ := json.Marshal(payload)
-
-req, _ := http.NewRequest("POST", "https://api.bipa.tech/partner/v1/pix-key", bytes.NewBuffer(body))
-req.Header.Set("X-API-Key", "your_partner_api_key")
-req.Header.Set("Content-Type", "application/json")
-
-client := &http.Client{}
-resp, _ := client.Do(req)
-```
-</RequestExample>
-
-<ResponseExample>
-```json 202 Accepted
-{
-  "status": "accepted"
-}
-```
-
-```json 409 Conflict
-{
-  "status": "already_exists"
-}
-```
-
-```json 404 Not Found
-{
-  "status": "user_not_found"
-}
-```
-
-```json 400 Bad Request
-{
-  "status": "invalid_document"
-}
-```
-
-```json 500 Internal Server Error
-{
-  "status": "failed"
-}
-```
-</ResponseExample>
-
 <Note>
-  The `accepted` status means the request was received. Monitor the Events API for `pix_key` events to track when the key is actually registered with the PIX network.
+  Pix key creation is asynchronous. Monitor the [Events](/api-reference/partner/events/list-events) endpoint for `pix_key` events to track the key registration status.
 </Note>
-
-## After creating a PIX key
-
-Once a key registration is accepted:
-
-1. **Poll for events** - Check `/v1/events?delivered=false` for `pix_key` events
-2. **Or query directly** - Use `GET /v1/pix-key/{document}` to check if the key is ready
-
-The key becomes active when you receive a `pix_key` event with `kind: registered`.
-
-<Warning>
-  Users must exist in the system before you can create PIX keys for them. If you receive `user_not_found`, ensure the user has been onboarded first.
-</Warning>
